feat: enhance docker and architechture
